fixing up display on smallest screens

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -115,6 +115,37 @@ p {
         color: rgb(75, 113, 151);
     }
 
+#list {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 60px;
+    overflow: auto;
+    margin-top: 0;
+    width: 100%;
+    height: 33%;
+    border-bottom: 1px solid #ddd;
+}
+
+#list .skill-image {
+    width: 100px;
+    clear: none;
+}
+#list .skill-title {
+    float: right;
+    margin: 20px;
+}
+
+#main {
+    position: fixed;
+    top: 33%;
+    overflow: scroll;
+}
+
+#main .skills-skill {
+    padding: 20px;
+}
+
 /*
  * -- project STYLES --
  * Styles relevant to the project messages, labels, counts, and more.
@@ -170,7 +201,7 @@ p {
     background: #eee;
 }
 .project-item-unread {
-    border-left: 6px solid #1b98f8;
+    /*border-left: 6px solid #1b98f8;*/
 }
 
 /* project Content Styles */
@@ -244,11 +275,32 @@ p {
     }
 
     #list {
-        margin-left: -350px;
+        /*margin-left: -350px;*/
+        margin-left: 100px;
         width: 100%;
         height: 33%;
         border-bottom: 1px solid #ddd;
+
+        /*position: auto;*/
+        /*top: auto;*/
+        bottom: auto;
+        overflow: auto;
+        /*margin-top: auto;*/
+
     }
+
+
+    /*#list {
+    }
+
+    #list .skill-image {
+        width: 100px;
+        clear: none;
+    }
+    #list .skill-title {
+        float: right;
+        margin: 20px;
+    }*/
 
     #main {
         position: fixed;
@@ -275,6 +327,13 @@ p {
         width: 350px;
         height: 100%;
         border-right: 1px solid #ddd;
+
+        position: auto;
+        top: auto;
+        bottom: auto;
+        left: auto;
+        overflow: auto;
+        margin-top: auto;
     }
 
     /* This will now take up it's own column, so don't need position: fixed; */
@@ -283,4 +342,23 @@ p {
         margin: 0;
         padding: 0;
     }
+
+
+    #list .skill-image {
+        width: auto;
+        clear: auto;
+        margin: 20px;
+    }
+    #list .skill-title {
+        float: auto;
+        margin: 20px;
+    }
+
+    #main {
+        position: auto;
+        top: auto;
+        overflow: auto;
+    }
+
+
 }
